fixing nav spacing on desktop

--- a/sass/components/nav.scss
+++ b/sass/components/nav.scss
@@ -41,6 +41,9 @@ nav {
   }
 
   ul {
+    @include susy-breakpoint($md) {
+      max-width: 53rem;
+    }
     display: flex;
     font-size: 0.75rem;
     height: 2rem;
@@ -84,6 +87,10 @@ nav {
         margin: 0;
       }
       &.donate {
+        @include susy-breakpoint($md) {
+          margin: 0.8rem 0 0 2rem;
+          width: 3.5rem;
+        }
         display: inline-block;
         margin: 0 auto;
         a {
@@ -112,10 +119,6 @@ nav {
             }
           }
         }
-        @include susy-breakpoint($md) {
-          margin: 0.8rem 0 0;
-          width: 8rem;
-        }
       }
     }
     .menu-logo {
@@ -123,6 +126,8 @@ nav {
         height: 45px;
         width: 45px;
         top: 1px;
+        margin-top: 0;
+        position: relative;
       }
       background-image: url("/images/starttls-small-logo.svg");
       background-repeat: no-repeat;
@@ -131,7 +136,6 @@ nav {
       height: 40px;
       left: 3%;
       top: 9px;
-      transition: all 0.3s;
       width: 40px;
       &:hover {
         background-image: url("/images/starttls-small-logo-hover.svg");
@@ -139,16 +143,6 @@ nav {
     }
     li.close-menu {
       display: none !important;
-    }
-    @include susy-breakpoint($md) {
-      max-width: 54rem;
-      .menu-logo {
-        margin-top: 0;
-        position: relative;
-        img {
-          width: 44px;
-        }
-      }
     }
   }
 }
